up-pro, media, dcr, pro-template
-fix bg img media
-fix card bg up-pro
-added dcr page
-added dcr img
-fix pro-template card bg

--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -1,14 +1,29 @@
+.custom-content-bg{
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
 
-
+.custom-content-bg::before{
+    content: "";
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(7px);
+    filter: brightness(50%);
+}
 
 .custom-dropbtn {
     padding: 10px;
     font-size: 16px;
     border: none;
     cursor: pointer;
+    color: white    ;
 }
 
-.custom-dropbtn::after{
+.custom-dropbtn::after {
     content: "\f160";
     font-family: "Font Awesome 5 Free";
     font-weight: bold;
@@ -18,13 +33,8 @@
 .custom-dropdown {
     position: relative;
     display: inline-block;
-    border: 2px solid black;
+    border: 3px solid white;
     margin: 20px 0 0 20px;
-}
-
-.custom-dropdown:hover{
-    background-color: green;
-    color: white;
 }
 
 .custom-dd-content {
@@ -64,10 +74,11 @@
     padding: 5px;
     transition: all 0.2s ease-in-out;
     border-bottom: 2px solid transparent;
+    color: white;
 }
 
 .filter-list-custom li:active {
-    color: #004f00;
+    color: ;
 }
 
 .card-flex-custom {
@@ -80,6 +91,7 @@
 .card-custom {
     display: flex;
     flex-direction: column;
+    background-color: white;
     width: 90%;
     height: auto;
     margin: 20px;
@@ -137,6 +149,54 @@
     border: 2px solid #004f00;
 }
 
+.custom-pagination{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    padding: 40px;
+    width: 20%;
+}
+
+.custom-pagination a{
+    color: white;
+    padding: 8px 16px;
+    text-decoration: none;
+    border: 1px solid white;
+}
+
+.custom-pagination a.active{
+    background-color: #7df69f;
+    color: white;
+    border: 1px solid #7df69f;
+}
+.custom-pagination a:hover:not(.active) {
+    color: white;
+    background-color: #7df69f;
+}
+
+.custom-pagination a:first-child {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.custom-pagination a:last-child {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.custom-previous-icon {
+    content: "/f100";
+    font-family: "font awesome 5 free";
+    font-weight: bold;
+}
+
+.custom-next-icon {
+    content: "/f101";
+    font-family: "font awesome 5 free";
+    font-weight: bold;
+}
+
 /* Small Device */
 @media (min-width: 640px) {
 
@@ -174,9 +234,9 @@
     }
 
     .filter-list-custom li:hover {
-        color: #018427;
+        color: #7df69f;
         transform: scale(1.1);
-        border-bottom: 2px solid #018427;
+        border-bottom: 2px solid #7df69f;
     }
 
     .filter-list-custom li:active {
