--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -3,19 +3,17 @@
     width: 100%;
 }
 
-.custom-bg {
+.custom-bg-img {
     width: 100%;
     height: 100%;
     position: absolute;
-    background-image: url("../img/media/brutv-bg.jpg");
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    z-index: -1;
 }
 
-.custom-bg::before {
+.custom-bg-img::before {
     content: "";
     position: absolute;
     width: 100%;
@@ -33,7 +31,6 @@
     width: 95%;
     height: auto;
     color: white;
-    z-index: 10;
 }
 
 .custom-header {
@@ -103,7 +100,7 @@
     color: white;
 }
 
-.custom-button::after {
+/* .custom-button::after {
     content: "\f04b";
     font-family: "font awesome 5 free";
     font-weight: bold;
@@ -117,7 +114,7 @@
     margin: auto;
     margin-top: 70px;
     margin-left: 20px;
-}
+} */
 
 .custom-video-layout {
     display: flex;
