initial (fixed navbar)

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -2200,7 +2200,7 @@ html {
   }
 }
 
-.dropdown {
+/* .dropdown {
   position: relative;
   display: inline-block;
 }
@@ -2303,7 +2303,7 @@ html {
   .footer-center {
     grid-auto-flow: row dense;
   }
-}
+} */
 
 .label {
   display: flex;
@@ -3439,14 +3439,14 @@ body[dir="rtl"] .checkbox:checked,
   outline: 2px solid currentColor;
 }
 
-.dropdown.dropdown-open .dropdown-content, 
+/* .dropdown.dropdown-open .dropdown-content, 
 .dropdown.dropdown-hover:hover .dropdown-content, 
 .dropdown:focus .dropdown-content, 
 .dropdown:focus-within .dropdown-content {
   --tw-scale-x: 1;
   --tw-scale-y: 1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
+} */
 
 .label a:hover {
   --tw-text-opacity: 1;
