--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -583,8 +583,16 @@ video {
   position: sticky;
 }
 
+.top-20 {
+  top: 5rem;
+}
+
 .top-0 {
   top: 0px;
+}
+
+.top-full {
+  top: 100%;
 }
 
 .left-0 {
@@ -595,20 +603,12 @@ video {
   right: 0px;
 }
 
-.top-20 {
-  top: 5rem;
-}
-
 .top-3\/4 {
   top: 75%;
 }
 
 .bottom-0 {
   bottom: 0px;
-}
-
-.top-full {
-  top: 100%;
 }
 
 .top-3 {
@@ -647,10 +647,6 @@ video {
   grid-column-end: 2;
 }
 
-.m-6 {
-  margin: 1.5rem;
-}
-
 .m-4 {
   margin: 1rem;
 }
@@ -659,19 +655,23 @@ video {
   margin: auto;
 }
 
+.m-6 {
+  margin: 1.5rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
 }
 
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
 .my-auto {
   margin-top: auto;
   margin-bottom: auto;
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .my-14 {
@@ -684,12 +684,12 @@ video {
   margin-bottom: 3rem;
 }
 
-.mt-0 {
-  margin-top: 0px;
-}
-
 .mb-4 {
   margin-bottom: 1rem;
+}
+
+.mt-0 {
+  margin-top: 0px;
 }
 
 .mt-6 {
@@ -700,20 +700,12 @@ video {
   margin-left: 1rem;
 }
 
-.ml-1 {
-  margin-left: 0.25rem;
-}
-
 .ml-auto {
   margin-left: auto;
 }
 
 .mb-\[40px\] {
   margin-bottom: 40px;
-}
-
-.ml-2 {
-  margin-left: 0.5rem;
 }
 
 .mb-12 {
@@ -726,6 +718,10 @@ video {
 
 .mb-2 {
   margin-bottom: 0.5rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
 }
 
 .mb-8 {
@@ -742,6 +738,10 @@ video {
 
 .ml-5 {
   margin-left: 1.25rem;
+}
+
+.ml-1 {
+  margin-left: 0.25rem;
 }
 
 .ml-0 {
@@ -780,48 +780,20 @@ video {
   display: none;
 }
 
-.h-\[60vh\] {
-  height: 60vh;
-}
-
 .h-full {
   height: 100%;
-}
-
-.h-\[75\%\] {
-  height: 75%;
-}
-
-.h-auto {
-  height: auto;
 }
 
 .h-6 {
   height: 1.5rem;
 }
 
-.h-\[312px\] {
-  height: 312px;
-}
-
-.h-1\/4 {
-  height: 25%;
-}
-
-.h-\[75vh\] {
-  height: 75vh;
-}
-
-.h-\[275px\] {
-  height: 275px;
-}
-
 .h-\[50px\] {
   height: 50px;
 }
 
-.h-\[80px\] {
-  height: 80px;
+.h-\[312px\] {
+  height: 312px;
 }
 
 .h-\[100px\] {
@@ -838,6 +810,34 @@ video {
 
 .h-40 {
   height: 10rem;
+}
+
+.h-\[60vh\] {
+  height: 60vh;
+}
+
+.h-\[75\%\] {
+  height: 75%;
+}
+
+.h-auto {
+  height: auto;
+}
+
+.h-1\/4 {
+  height: 25%;
+}
+
+.h-\[75vh\] {
+  height: 75vh;
+}
+
+.h-\[275px\] {
+  height: 275px;
+}
+
+.h-\[80px\] {
+  height: 80px;
 }
 
 .h-1 {
@@ -864,18 +864,6 @@ video {
   width: 100%;
 }
 
-.w-auto {
-  width: auto;
-}
-
-.w-2\/4 {
-  width: 50%;
-}
-
-.w-1\/2 {
-  width: 50%;
-}
-
 .w-6 {
   width: 1.5rem;
 }
@@ -886,20 +874,8 @@ video {
   width: fit-content;
 }
 
-.w-\[312px\] {
-  width: 312px;
-}
-
-.w-\[275px\] {
-  width: 275px;
-}
-
 .w-\[80\%\] {
   width: 80%;
-}
-
-.w-\[50px\] {
-  width: 50px;
 }
 
 .w-11\/12 {
@@ -912,6 +888,30 @@ video {
 
 .w-3\/4 {
   width: 75%;
+}
+
+.w-auto {
+  width: auto;
+}
+
+.w-2\/4 {
+  width: 50%;
+}
+
+.w-1\/2 {
+  width: 50%;
+}
+
+.w-\[312px\] {
+  width: 312px;
+}
+
+.w-\[275px\] {
+  width: 275px;
+}
+
+.w-\[50px\] {
+  width: 50px;
 }
 
 .w-2 {
@@ -1083,12 +1083,12 @@ video {
   border-radius: 0.375rem;
 }
 
-.rounded-full {
-  border-radius: 9999px;
-}
-
 .rounded-\[100\%\] {
   border-radius: 100%;
+}
+
+.rounded-full {
+  border-radius: 9999px;
 }
 
 .border {
@@ -1099,24 +1099,24 @@ video {
   border-width: 1px;
 }
 
-.border-2 {
-  border-width: 2px;
-}
-
 .border-4 {
   border-width: 4px;
+}
+
+.border-2 {
+  border-width: 2px;
 }
 
 .border-t-\[1px\] {
   border-top-width: 1px;
 }
 
-.border-b-\[3px\] {
-  border-bottom-width: 3px;
-}
-
 .border-b-\[1px\] {
   border-bottom-width: 1px;
+}
+
+.border-b-\[3px\] {
+  border-bottom-width: 3px;
 }
 
 .border-b-2 {
@@ -1128,9 +1128,19 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
+.border-yellow-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(253 224 71 / var(--tw-border-opacity));
+}
+
 .border-neutral-300 {
   --tw-border-opacity: 1;
   border-color: rgb(212 212 212 / var(--tw-border-opacity));
+}
+
+.border-slate-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(148 163 184 / var(--tw-border-opacity));
 }
 
 .border-slate-200 {
@@ -1138,18 +1148,9 @@ video {
   border-color: rgb(226 232 240 / var(--tw-border-opacity));
 }
 
-.border-\[color\:var\(--green\)\] {
-  border-color: var(--green);
-}
-
-.border-yellow-300 {
+.border-primary-green {
   --tw-border-opacity: 1;
-  border-color: rgb(253 224 71 / var(--tw-border-opacity));
-}
-
-.border-slate-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(148 163 184 / var(--tw-border-opacity));
+  border-color: hsl(137 98% 26% / var(--tw-border-opacity));
 }
 
 .border-slate-300 {
@@ -1162,26 +1163,23 @@ video {
   border-top-color: rgb(226 232 240 / var(--tw-border-opacity));
 }
 
-.border-b-transparent {
-  border-bottom-color: transparent;
-}
-
-.border-b-\[color\:var\(--green\)\] {
-  border-bottom-color: var(--green);
-}
-
 .border-b-slate-200 {
   --tw-border-opacity: 1;
   border-bottom-color: rgb(226 232 240 / var(--tw-border-opacity));
 }
 
+.border-b-transparent {
+  border-bottom-color: transparent;
+}
+
+.border-b-primary-green {
+  --tw-border-opacity: 1;
+  border-bottom-color: hsl(137 98% 26% / var(--tw-border-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[color\:var\(--green\)\] {
-  background-color: var(--green);
 }
 
 .bg-primary-green {
@@ -1192,10 +1190,6 @@ video {
 .bg-stone-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(245 245 244 / var(--tw-bg-opacity));
-}
-
-.bg-\[color\:var\(--gray\)\] {
-  background-color: var(--gray);
 }
 
 .bg-primary-gray {
@@ -1211,10 +1205,6 @@ video {
   background-image: url(assets/img/career-bg.jpg);
 }
 
-.bg-gradient-to-t {
-  background-image: linear-gradient(to top, var(--tw-gradient-stops));
-}
-
 .bg-\[url\(\'assets\/img\/media\/brutv-bg\.jpg\'\)\] {
   background-image: url('assets/img/media/brutv-bg.jpg');
 }
@@ -1225,6 +1215,10 @@ video {
 
 .bg-\[url\(assets\/img\/engineers\.jpg\)\] {
   background-image: url(assets/img/engineers.jpg);
+}
+
+.bg-gradient-to-t {
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
 
 .from-\[\#000000cc\] {
@@ -1261,10 +1255,6 @@ video {
   padding: 1rem;
 }
 
-.p-6 {
-  padding: 1.5rem;
-}
-
 .p-10 {
   padding: 2.5rem;
 }
@@ -1277,6 +1267,10 @@ video {
   padding: 0.5rem;
 }
 
+.p-6 {
+  padding: 1.5rem;
+}
+
 .p-12 {
   padding: 3rem;
 }
@@ -1287,11 +1281,6 @@ video {
 
 .p-14 {
   padding: 3.5rem;
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
 }
 
 .px-8 {
@@ -1324,6 +1313,21 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-\[0\.5rem\] {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -1344,9 +1348,9 @@ video {
   padding-bottom: 0.6rem;
 }
 
-.px-16 {
-  padding-left: 4rem;
-  padding-right: 4rem;
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .px-6 {
@@ -1359,16 +1363,6 @@ video {
   padding-bottom: 1rem;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
 .py-0 {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -1379,12 +1373,12 @@ video {
   padding-right: 2.5rem;
 }
 
-.pb-4 {
-  padding-bottom: 1rem;
-}
-
 .pr-8 {
   padding-right: 2rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
 }
 
 .pt-8 {
@@ -1431,14 +1425,14 @@ video {
   font-family: 'Lato';
 }
 
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
 }
 
 .text-xl {
@@ -1446,9 +1440,8 @@ video {
   line-height: 1.75rem;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.text-\[70px\] {
+  font-size: 70px;
 }
 
 .text-sm {
@@ -1456,22 +1449,9 @@ video {
   line-height: 1.25rem;
 }
 
-.text-\[10vw\] {
-  font-size: 10vw;
-}
-
-.text-\[70px\] {
-  font-size: 70px;
-}
-
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 
 .text-4xl {
@@ -1479,17 +1459,23 @@ video {
   line-height: 2.5rem;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-\[10vw\] {
+  font-size: 10vw;
+}
+
 .text-6xl {
   font-size: 3.75rem;
   line-height: 1;
-}
-
-.font-black {
-  font-weight: 900;
-}
-
-.font-semibold {
-  font-weight: 600;
 }
 
 .font-bold {
@@ -1498,6 +1484,14 @@ video {
 
 .font-medium {
   font-weight: 500;
+}
+
+.font-black {
+  font-weight: 900;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .uppercase {
@@ -1534,18 +1528,19 @@ video {
   color: rgb(226 232 240 / var(--tw-text-opacity));
 }
 
-.text-neutral-400 {
-  --tw-text-opacity: 1;
-  color: rgb(163 163 163 / var(--tw-text-opacity));
-}
-
 .text-slate-400 {
   --tw-text-opacity: 1;
   color: rgb(148 163 184 / var(--tw-text-opacity));
 }
 
-.text-\[color\:var\(--green\)\] {
-  color: var(--green);
+.text-neutral-400 {
+  --tw-text-opacity: 1;
+  color: rgb(163 163 163 / var(--tw-text-opacity));
+}
+
+.text-primary-green {
+  --tw-text-opacity: 1;
+  color: hsl(137 98% 26% / var(--tw-text-opacity));
 }
 
 .underline {
@@ -1717,14 +1712,327 @@ body {
   line-height: 2.25rem;
 }
 
-/* Partners - ACI */
+/*Header and Footer*/
+
+.nav-menu, 
+        .dropdown-menu {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.dropdown {
+  position: relative;
+  cursor: pointer;
+}
+
+/* Transition and Fonts */
+
+.nav-menu a {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 100ms;
+}
+
+/* Navbar Items */
+
+.nav-item {
+  width: 100%;
+}
+
+@media (min-width: 1024px) {
+  .nav-item {
+    width: auto;
+  }
+}
+
+.nav-item > a {
+  display: none;
+  border-bottom-width: 3px;
+  border-bottom-color: transparent;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 0.5rem;
+  text-align: center;
+  font-weight: 600;
+}
+
+@media (min-width: 1024px) {
+  .nav-item > a {
+    display: inline-block;
+  }
+}
+
+.nav-menu.focused .nav-item > a, 
+        .nav-menu.focused .nav-item > a {
+  display: block;
+}
+
+.nav-item:not(.active) > a:hover, 
+        .dropdown:not(.active):hover > a {
+  --tw-border-opacity: 1;
+  border-bottom-color: hsl(137 98% 26% / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: hsl(137 98% 26% / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.nav-item.active > a {
+  --tw-border-opacity: 1;
+  border-bottom-color: hsl(137 98% 26% / var(--tw-border-opacity));
+  --tw-text-opacity: 1;
+  color: hsl(137 98% 26% / var(--tw-text-opacity));
+}
+
+/* Dropdown Items */
+
+.dropdown {
+  position: relative;
+}
+
+.dropdown > a::after {
+  margin-left: 0.5rem;
+  display: inline-block;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  font-weight: 700;
+  content: "\f107";
+  font-family: "Font Awesome 5 Free";
+}
+
+.dropdown-menu {
+  display: none;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(226 232 240 / var(--tw-border-opacity));
+}
+
+@media (min-width: 1024px) {
+  .dropdown-menu {
+    position: absolute;
+    top: 100%;
+    right: 0px;
+    width: 200%;
+  }
+}
+
+.dropdown.focused > a {
+  --tw-border-opacity: 1;
+  border-bottom-color: hsl(137 98% 26% / var(--tw-border-opacity));
+  --tw-text-opacity: 1;
+  color: hsl(137 98% 26% / var(--tw-text-opacity));
+}
+
+.dropdown.focused .dropdown-menu {
+  display: block;
+}
+
+@media (min-width: 1024px) {
+  .dropdown:hover .dropdown-menu {
+    display: block;
+  }
+}
+
+.dropdown-item > a {
+  display: block;
+  padding: 1rem;
+  font-weight: 600;
+}
+
+.dropdown-item > a:hover {
+  border-left-width: 4px;
+  --tw-border-opacity: 1;
+  border-left-color: hsl(137 98% 26% / var(--tw-border-opacity));
+  --tw-text-opacity: 1;
+  color: hsl(137 98% 26% / var(--tw-text-opacity));
+}
+
+.dropdown-item:not(:last-of-type) > a {
+  border-bottom-width: 1px;
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(226 232 240 / var(--tw-border-opacity));
+}
+
+/* Navbar Item: Logo */
+
+.nav-logo {
+  margin-right: auto;
+}
+
+.nav-logo img {
+  margin: 0.5rem;
+  height: 80px;
+}
+
+/* Navbar Item: footer-contact Us Button */
+
+.nav-button {
+  display: none;
+  border-radius: 9999px;
+  --tw-bg-opacity: 1;
+  background-color: hsl(137 98% 26% / var(--tw-bg-opacity));
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  font-weight: 700;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+@media (min-width: 640px) {
+  .nav-button {
+    display: block;
+  }
+}
+
+@media (min-width: 1024px) {
+  .nav-button {
+    display: none;
+  }
+}
+
+@media (min-width: 640px) {
+  .nav-item.button {
+    display: none;
+  }
+}
+
+@media (min-width: 1024px) {
+  .nav-item.button {
+    display: inline-block;
+  }
+}
+
+/* Navbar Item: Menu Toggle */
+
+.nav-toggle a {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 600;
+}
+
+@media (min-width: 768px) {
+  .nav-toggle a {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .nav-toggle a {
+    display: none;
+  }
+}
+
+footer nav > div {
+  width: 25%;
+  padding: 0.5rem;
+}
+
+footer h6 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+footer nav > div:not(.footer-contact) ul a {
+  display: block;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+footer nav > div:not(.footer-contact) ul a:hover {
+  --tw-bg-opacity: 1;
+  background-color: hsl(137 98% 26% / var(--tw-bg-opacity));
+  font-weight: 500;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+footer nav > .footer-contact .button {
+  border-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: hsl(137 98% 26% / var(--tw-border-opacity));
+  padding: 1rem;
+  text-align: center;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  --tw-text-opacity: 1;
+  color: hsl(137 98% 26% / var(--tw-text-opacity));
+  transition-property: color, background-color, border-color, fill, stroke, -webkit-text-decoration-color;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, -webkit-text-decoration-color;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
+}
+
+footer nav > .footer-contact .button:hover {
+  --tw-bg-opacity: 1;
+  background-color: hsl(137 98% 26% / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+footer nav > .footer-contact li:not(:first-of-type) {
+  display: flex;
+  flex-direction: column;
+}
+
+footer nav > .footer-contact li:not(:first-of-type) a {
+  transition-property: color, background-color, border-color, fill, stroke, -webkit-text-decoration-color;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, -webkit-text-decoration-color;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+footer nav > .footer-contact li:not(:first-of-type) a:hover {
+  --tw-text-opacity: 1;
+  color: hsl(137 98% 26% / var(--tw-text-opacity));
+}
+
+footer nav > .footer-contact li:not(:first-of-type) i {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  --tw-text-opacity: 1;
+  color: hsl(137 98% 26% / var(--tw-text-opacity));
+}
+
+footer nav a {
+  display: block;
+}
+
+footer > div .links .link-item {
+  height: 50px;
+  width: 50px;
+}
+
+/*  */
 
 .hover\:border-l-\[4px\]:hover {
   border-left-width: 4px;
 }
 
-.hover\:border-l-\[color\:var\(--green\)\]:hover {
-  border-left-color: var(--green);
+.hover\:border-l-primary-green:hover {
+  --tw-border-opacity: 1;
+  border-left-color: hsl(137 98% 26% / var(--tw-border-opacity));
 }
 
 .hover\:bg-white:hover {
@@ -1732,8 +2040,9 @@ body {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-\[color\:var\(--green\)\]:hover {
-  background-color: var(--green);
+.hover\:bg-primary-green:hover {
+  --tw-bg-opacity: 1;
+  background-color: hsl(137 98% 26% / var(--tw-bg-opacity));
 }
 
 .hover\:text-primary-green:hover {
@@ -1749,10 +2058,6 @@ body {
 .hover\:text-\[\#00acee\]:hover {
   --tw-text-opacity: 1;
   color: rgb(0 172 238 / var(--tw-text-opacity));
-}
-
-.hover\:text-\[color\:var\(--green\)\]:hover {
-  color: var(--green);
 }
 
 .hover\:text-white:hover {
@@ -1844,13 +2149,13 @@ body {
     text-align: left;
   }
 
-  .sm\:text-\[7vw\] {
-    font-size: 7vw;
-  }
-
   .sm\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
+  }
+
+  .sm\:text-\[7vw\] {
+    font-size: 7vw;
   }
 }
 
@@ -1890,10 +2195,6 @@ body {
     min-height: 312px;
   }
 
-  .md\:w-1\/3 {
-    width: 33.333333%;
-  }
-
   .md\:w-2\/3 {
     width: 66.666667%;
   }
@@ -1916,6 +2217,10 @@ body {
 
   .md\:w-10\/12 {
     width: 83.333333%;
+  }
+
+  .md\:w-1\/3 {
+    width: 33.333333%;
   }
 
   .md\:flex-row {
@@ -1963,8 +2268,9 @@ body {
     border-color: rgb(203 213 225 / var(--tw-border-opacity));
   }
 
-  .md\:border-b-\[color\:var\(--green\)\] {
-    border-bottom-color: var(--green);
+  .md\:border-b-primary-green {
+    --tw-border-opacity: 1;
+    border-bottom-color: hsl(137 98% 26% / var(--tw-border-opacity));
   }
 
   .md\:bg-primary-green {
@@ -1980,10 +2286,6 @@ body {
     background-size: 200% auto;
   }
 
-  .md\:p-4 {
-    padding: 1rem;
-  }
-
   .md\:p-8 {
     padding: 2rem;
   }
@@ -1994,6 +2296,10 @@ body {
 
   .md\:p-12 {
     padding: 3rem;
+  }
+
+  .md\:p-4 {
+    padding: 1rem;
   }
 
   .md\:py-4 {
@@ -2064,20 +2370,12 @@ body {
     height: 18rem;
   }
 
-  .lg\:w-1\/4 {
-    width: 25%;
-  }
-
   .lg\:w-2\/4 {
     width: 50%;
   }
 
   .lg\:w-\[97\%\] {
     width: 97%;
-  }
-
-  .lg\:w-\[200\%\] {
-    width: 200%;
   }
 
   .lg\:w-auto {
@@ -2096,8 +2394,16 @@ body {
     width: 40%;
   }
 
+  .lg\:w-1\/4 {
+    width: 25%;
+  }
+
   .lg\:w-1\/2 {
     width: 50%;
+  }
+
+  .lg\:w-\[200\%\] {
+    width: 200%;
   }
 
   .lg\:flex-row {
