--- a/assets/css/about-output.css
+++ b/assets/css/about-output.css
@@ -61,7 +61,7 @@ section header h3 {
     border-radius: 0.375rem;
     border-bottom-width: 2px;
     --tw-border-opacity: 1;
-    border-bottom-color: hsl(137 98% 26% / var(--tw-border-opacity));
+    border-bottom-color: hsl(135 100% 27% / var(--tw-border-opacity));
     padding-top: 1rem;
     padding-bottom: 1rem
   }
@@ -115,7 +115,7 @@ section header h3 {
   height: 100%;
   width: 50%;
   --tw-bg-opacity: 1;
-  background-color: hsl(137 98% 26% / var(--tw-bg-opacity))
+  background-color: hsl(135 100% 27% / var(--tw-bg-opacity))
 }
 
 #about .accent-left {
@@ -184,6 +184,7 @@ section header h3 {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   padding: 1rem;
+  text-align: justify;
   font-size: 1.25rem;
   line-height: 1.75rem;
   font-weight: 600;
