--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -47,6 +47,8 @@
 }
 
 .custom-title {
+    text-align: center;
+    padding: 10px;
     font-size: 30px;
     font-weight: bold;
 }
@@ -129,7 +131,7 @@
     width: 300px;
     height: 200px;
 }
-
+/* SM */
 @media screen and (min-width: 640px) {
 
     .custom-video-style {
@@ -153,7 +155,7 @@
     }
 
 }
-
+/* MD */
 @media screen and (min-width: 768px) {
 
     .custom-content {
@@ -170,19 +172,19 @@
 
     .custom-header {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         margin: auto;
     }
 
     .custom-logo {
-        width: 150px;
+        width: 120px;
         height: auto;
     }
 
     .custom-title {
-        font-size: 50px;
+        font-size: 40px;
         font-weight: bold;
     }
 
@@ -220,7 +222,7 @@
 
 
 }
-
+/* LG */
 @media screen and (min-width: 1024px) {
 
     .custom-caption {
@@ -246,8 +248,18 @@
         height: 250px;
     }
 
-}
+    .custom-logo {
+        width: 140px;
+        height: auto;
+    }
 
+    .custom-title {
+        font-size: 50px;
+        font-weight: bold;
+    }
+
+}
+/* XL */
 @media screen and (min-width: 1080px) {
 
     .custom-content-wrapper {
@@ -290,7 +302,7 @@
 
     .custom-header {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         margin: auto;
