--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -109,6 +109,32 @@
     margin-left: 10px;
 }
 
+.custom-button2 {
+    position: absolute;
+    border: 2px solid black;
+    background-image: linear-gradient(to bottom right, #fbfbfb, #000000);
+    color: white;
+    padding: 10px 20px;
+    transition: all 0.4s ease-in-out;
+    white-space: nowrap;
+    top: 100%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.custom-button2:hover {
+    transition: all 0.4s ease-in-out;
+    background-image: linear-gradient(to bottom right, #868686, #000000);
+    color: white;
+}
+
+.custom-button2::after {
+    content: "\f04b";
+    font-family: "font awesome 5 free";
+    font-weight: bold;
+    margin-left: 10px;
+}
+
 .custom-caption {
     display: flex;
     font-size: 30px;
